--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.eventosapp</groupId>
-	<artifactId>eventosapp</artifactId>
+	<groupId>br.com.doacoesapp</groupId>
+	<artifactId>doacoesapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>eventosapp</name>
-	<description>Demo project for Spring Boot</description>
+	<name>doacoesapp</name>
+	<description>6-TIO-UNIDRUMMOND</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
